--- a/package.json
+++ b/package.json
@@ -5,14 +5,20 @@
   "author": "Hunter Chang",
   "dependencies": {
     "gatsby": "^2.0.76",
+    "gatsby-image": "^2.0.29",
     "gatsby-plugin-manifest": "^2.0.9",
     "gatsby-plugin-offline": "^2.0.16",
     "gatsby-plugin-react-helmet": "^3.0.2",
     "gatsby-plugin-sass": "^2.0.7",
+    "gatsby-plugin-sharp": "^2.0.20",
+    "gatsby-source-filesystem": "^2.0.20",
+    "gatsby-transformer-sharp": "^2.1.13",
     "node-sass": "^4.11.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-helmet": "^5.2.0"
+    "react-github-corner": "^2.3.0",
+    "react-helmet": "^5.2.0",
+    "react-image-gallery": "^0.8.12"
   },
   "keywords": [
     "gatsby"
